# AppliedMaths

./: .gitignore  CMakeLists.txt  brent.cpp  brent.h  dichotomy.cpp  dichotomy.h  fibonacci.cpp  fibonacci.h  general.cpp  general.h  goldenRatio.cpp  goldenRatio.h  main.cpp  parabolic.cpp  parabolic.h
Lab-1/: CMakeLists.txt  brent.h  dichotomy.cpp  general.h  goldenRatio.h  parabolic.cpp
Lab-2/: CMakeLists.txt  conjugate_gradients_method.cpp  gradient_descend.cpp  gradient_descend.h  gradient_descend_iterations_counter.cpp  gradient_descend_step.cpp  gradient_descend_step.h  main.cpp  quadratic_function.cpp  quadratic_function.h
Lab-3/: main.py  matrix.py  matrix_generation.py  sle.py  test.py  test_csr.py  test_sle.py
MatrixLabs/: .gitignore
MatrixLabs/Lab-3/: main.py  matrix_generation.py  sle.py
MatrixLabs/Lab3/: main.py  matrix.py  matrix_generation.py  test_csr.py
MatrixLabs/Lab4/: jakobi_rotation.py  jakobi_rotation_test.py  main.py
MatrixLabs/Lab4/output/: gilbert1.txt  gilbert2.txt  seq1.txt  seq2.txt  seq3.txt
OptimizationLabs/: .gitignore  CMakeLists.txt
OptimizationLabs/Lab-1/: CMakeLists.txt  brent.cpp  dichotomy.h  fibonacci.h  general.cpp  goldenRatio.cpp  main.cpp  parabolic.h
OptimizationLabs/Lab-2/: CMakeLists.txt  conjugate_gradients_method.cpp  conjugate_gradients_method.h  gradient_descend.cpp  gradient_descend_iterations_counter.h  gradient_descend_step.cpp  gradient_descend_step.h  quadratic_function.cpp
OptimizationLabs/Lab-2/graphs/: main.py
